--- a/roles/k8s_master_tinc/tasks/main.yml
+++ b/roles/k8s_master_tinc/tasks/main.yml
@@ -136,16 +136,22 @@
 #   command: kubeadm token create  --print-join-command
 #   register: token
 
-# Configure client ovpn
+# copy application to the server
 - name: "copy deployments file to master"
   template:
     src: deployments.yml
     dest: "/root/"
 
-# Configure client ovpn
+# copy services to the server
 - name: "copy services file to master"
   template:
     src: services.yml
+    dest: "/root/"
+
+# copy steps to follow to the server
+- name: "copy services file to master"
+  template:
+    src: steps.txt
     dest: "/root/"
 
 # Cleaning caches on nodes RAM's. The “shell” module used here to clean the buffer cache on the master node,
