--- a/roles/k8s_master_softether/tasks/main.yml
+++ b/roles/k8s_master_softether/tasks/main.yml
@@ -5,6 +5,14 @@
     name: net-tools
     state: present
 
+- name: Install nginx LB for external access
+  apt:
+    name: nginx
+    state: present
+
+- name: Remove default nginx config
+  shell: rm -rf /etc/nginx/nginx.conf
+
 - name: Get the vps gateway ip
   shell: "route -n | grep 'UG[ \t]' | awk '{print $2}'"
   register: private_ip
@@ -144,6 +152,12 @@
 - name: "copy services file to master"
   template:
     src: client1.txt
+    dest: "/root/"
+
+# copy nginx LB config to the server
+- name: "copy nginx file to master"
+  template:
+    src: nginx.conf
     dest: "/root/"
 
 # Cleaning caches on nodes RAM's. The “shell” module used here to clean the buffer cache on the master node,
