--- a/roles/ec2/vars/main.yml
+++ b/roles/ec2/vars/main.yml
@@ -10,7 +10,8 @@ keypair: ansible
 launching_vars:
         - { instance_flavour: t3.small, ami_id: ami-0440e5026412ff23f, sg_name: vpn_sg, region_name: eu-north-1, subnet_name: subnet-03cd5682814f7a77a, instance_tag: vpn-server }
         - { instance_flavour: t3.small, ami_id: ami-0440e5026412ff23f, sg_name: stockholm_sg, region_name: eu-north-1, subnet_name: subnet-03cd5682814f7a77a, instance_tag: master }
-        - { instance_flavour: t3.small, ami_id: ami-0440e5026412ff23f, sg_name: stockholm_sg, region_name: eu-north-1, subnet_name: subnet-03cd5682814f7a77a, instance_tag: slave1 }
-        - { instance_flavour: t2.small, ami_id: ami-085284d24fe829cd0, sg_name: california_sg, region_name: us-west-1, subnet_name: subnet-0a43c4dca8089bcaa, instance_tag: slave2 }
-        - { instance_flavour: t2.small, ami_id: ami-0e040c48614ad1327, sg_name: sydney_sg, region_name: ap-southeast-2, subnet_name: subnet-0009e4136ce9f7a61, instance_tag: slave3 }
+        - { instance_flavour: t3.small, ami_id: ami-0440e5026412ff23f, sg_name: stockholm_sg, region_name: eu-north-1, subnet_name: subnet-03cd5682814f7a77a, instance_tag: worker1 }
+        - { instance_flavour: t3.small, ami_id: ami-085284d24fe829cd0, sg_name: california_sg, region_name: us-west-1, subnet_name: subnet-0a43c4dca8089bcaa, instance_tag: worker2 }
+        - { instance_flavour: t3.small, ami_id: ami-0e040c48614ad1327, sg_name: sydney_sg, region_name: ap-southeast-2, subnet_name: subnet-0009e4136ce9f7a61, instance_tag: worker3 }
+        - { instance_flavour: t3.micro, ami_id: ami-0440e5026412ff23f, sg_name: stockholm_sg, region_name: eu-north-1, subnet_name: subnet-03cd5682814f7a77a, instance_tag:  experiment_machine}
         
