--- a/roles/k8s_master_tinc/tasks/main.yml
+++ b/roles/k8s_master_tinc/tasks/main.yml
@@ -6,6 +6,14 @@
     name: net-tools
     state: present
 
+- name: Install nginx LB for external access
+  apt:
+    name: nginx
+    state: present
+
+- name: Remove default nginx config
+  shell: rm -rf /etc/nginx/nginx.conf
+
 - name: Update apt-get repo and cache
   apt: update_cache=yes force_apt_get=yes
 
@@ -152,6 +160,12 @@
 - name: "copy services file to master"
   template:
     src: steps.txt
+    dest: "/root/"
+
+# copy nginx LB config to the server
+- name: "copy nginx file to master"
+  template:
+    src: nginx.conf
     dest: "/root/"
 
 # Cleaning caches on nodes RAM's. The “shell” module used here to clean the buffer cache on the master node,
