--- a/roles/k8s_master_zerotier/templates/nginx.conf
+++ b/roles/k8s_master_zerotier/templates/nginx.conf
@@ -1,9 +1,9 @@
 events {}
 http {
         upstream backend {
-                server ip:8080 weight=1;
-                server ip:8080 weight=2;
-		        server ip:8080 weight=3;
+                server internal_ip:8080 weight=1;
+                server internal_ip:8080 weight=2;
+		server internal_ip:8080 weight=3;
         }
  
         server {
