Fix the role name for setup scripts

--- a/setup_tinc.yml
+++ b/setup_tinc.yml
@@ -37,7 +37,7 @@
   tasks:
     - name: Running K8s test machine role
       include_role:
-        name: k8s_test
+        name: k8s_test_tinc
 
 #Run vpn server
 - hosts: ec2_vpn
