Fix wiregiard vpn configs

--- a/roles/k8s_master_wg/tasks/main.yml
+++ b/roles/k8s_master_wg/tasks/main.yml
@@ -123,7 +123,7 @@
       net.bridge.bridge-nf-call-ip6tables = 1
       net.bridge.bridge-nf-call-iptables = 1
 
-# Reloading sysctl on Slave Node to activate the bridge changes
+# Reloading sysctl on worker Node to activate the bridge changes
 - name: Reloading sysctl on master Node
   command: sysctl --system
 
