--- a/roles/k8s_worker_wg/tasks/main.yml
+++ b/roles/k8s_worker_wg/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for k8s_slave
+# tasks file for k8s_worker
 
 - name: Install net-tools for network management
   apt:
@@ -32,10 +32,10 @@
 
 - name: Get the vps gateway ip 
   shell: "route -n | grep 'UG[ \t]' | awk '{print $2}'"
-  register: slaves_private_ip
+  register: workers_private_ip
 
 - name: Arrange route for ssh to access via primary interface
-  shell: "route add -host 213.112.64.208 gw {{ slaves_private_ip.stdout }}"
+  shell: "route add -host 213.112.64.208 gw {{ workers_private_ip.stdout }}"
 
 # Adding kubernetes repo from base url using gpg keys
 - name: install APT Transport HTTPS
@@ -54,8 +54,8 @@
     state: present
     filename: 'kubernetes'
 
-# Installing 'docker', 'kubeadm' and 'iproute-tc' on slave node 
-- name: Installing Docker & kubeadm on Slave Node
+# Installing 'docker', 'kubeadm' and 'iproute-tc' on worker node 
+- name: Installing Docker & kubeadm on worker Node
   package:
     name:
       - kubeadm
@@ -74,16 +74,16 @@
 - name: ensure docker and dependencies are installed
   apt: name=docker-ce update_cache=yes
   
-# Starting kubelet services on slave node.
-- name: Staring & enabling Docker & kubelet on Slave Node
+# Starting kubelet services on worker node.
+- name: Staring & enabling Docker & kubelet on worker Node
   service:
     name: kubelet
     state: started
     enabled: yes
 
-# Updating Docker cgroup on slave Node. Reason for using cgroupdriver as 'systemd' instead of default ones, 
+# Updating Docker cgroup on worker Node. Reason for using cgroupdriver as 'systemd' instead of default ones, 
 # https://kubernetes.io/docs/tasks/administer-cluster/kubeadm/configure-cgroup-driver/
-- name: Updating Docker cgroup on Slave Node
+- name: Updating Docker cgroup on worker Node
   copy:
     dest: /etc/docker/daemon.json
     content: |
@@ -91,26 +91,26 @@
       "exec-opts": ["native.cgroupdriver=systemd"]
       }
 
-# Restart the docker on slave node to get all things activated
-- name: Restart Docker on Slave Node
+# Restart the docker on worker node to get all things activated
+- name: Restart Docker on worker Node
   service:
     name: docker
     state: restarted
 
-# Updating IP tables on Slave Node. Usually in the linux distros like ubuntu,
+# Updating IP tables on worker Node. Usually in the linux distros like ubuntu,
 # (https://www.kevinhooke.com/2018/11/23/checking-iptables-filtering-for-bridge-networking-on-ubuntu-for-kubernetes-setup/)
 # the bridge module in the kernel for "ip6tables, iptables and arptables" has the default set to "1"
 # ("on", i.e. "*do* send the packets to iptables"), but for the distros like Fedora, RHEL, and CentOS they are set to '0' so we need to
 # update the '/etc/sysctl.d/k8s.conf' to set it to '1'
-- name: Updating IP tables on Slave Node
+- name: Updating IP tables on worker Node
   copy:
     dest: /etc/sysctl.d/k8s.conf
     content: |
       net.bridge.bridge-nf-call-ip6tables = 1
       net.bridge.bridge-nf-call-iptables = 1
 
-# Reloading sysctl on Slave Node to activate the bridge changes
-- name: Reloading sysctl on Slave Node
+# Reloading sysctl on worker Node to activate the bridge changes
+- name: Reloading sysctl on worker Node
   command: sysctl --system
 
 - name: Workaround for running kube-api server on ubuntu_21.x and later versions
@@ -127,7 +127,7 @@
     src: steps.txt
     dest: "/root/"
 
-# Cleaning caches on nodes RAM's. The “shell” module used here to clean the buffer cache on the slave nodes,
+# Cleaning caches on nodes RAM's. The “shell” module used here to clean the buffer cache on the worker nodes,
 # because while doing the setup it will create lots of temporary data on RAM
 - name: Cleaning Caches on RAM
   shell: echo 3 > /proc/sys/vm/drop_caches
