--- a/roles/k8s_worker_tinc/tasks/main.yml
+++ b/roles/k8s_worker_tinc/tasks/main.yml
@@ -84,6 +84,11 @@
     state: started
     enabled: yes
 
+- name: Create Docker directory
+  file:
+    path: /etc/docker
+    state: directory
+
 # Updating Docker cgroup on worker Node. Reason for using cgroupdriver as 'systemd' instead of default ones, 
 # https://kubernetes.io/docs/tasks/administer-cluster/kubeadm/configure-cgroup-driver/
 - name: Updating Docker cgroup on worker Node
