--- a/roles/k8s_master_softether/templates/nginx.conf
+++ b/roles/k8s_master_softether/templates/nginx.conf
@@ -1,13 +1,13 @@
 events {}
 http {
         upstream backend {
-                server internal_ip:8080 weight=1;
-                server internal_ip:8080 weight=2;
-		server internal_ip:8080 weight=3;
+                server vpn_ip1:8080 weight=1;
+                server vpn_ip2:8080 weight=2;
+		server vpn_ip3:8080 weight=3;
         }
  
         server {
-                listen 80;
+                listen 10.0.0.1:80;
                 location / {
                         proxy_pass http://backend;
 		}
