--- a/roles/k8s_test_tinc/tasks/main.yml
+++ b/roles/k8s_test_tinc/tasks/main.yml
@@ -14,37 +14,8 @@
     name: net-tools
     state: present
 
-- name: Update apt-get repo and cache
-  apt: update_cache=yes force_apt_get=yes
-
-- name: "Installing Tinc"
-  apt: name={{item}} state=present
-  with_items:
-    - tinc
-
-- name: "Create a directory for tinc configurations"
-  shell: mkdir -p /etc/tinc/netname/hosts
-
-- name: "copy tinc.conf file"
+# copy steps to follow to the server
+- name: "copy steps file to test server"
   template:
-    src: tinc.conf
-    dest: "/etc/tinc/netname/"
-
-- name: "Copy hosts config file"
-  template:
-    src: experimental
-    dest: "/etc/tinc/netname/hosts/"
-
-- name: "copy tinc-up script"
-  template:
-    src: tinc-up
-    dest: "/etc/tinc/netname/"
-
-- name: "copy tinc-down script"
-  template:
-    src: tinc-down
-    dest: "/etc/tinc/netname/"
-
-- name: "Make the tinc scripts executable"
-  shell: chmod 755 /etc/tinc/netname/tinc-*
-
+    src: steps.txt
+    dest: "/root/"
