Update all vpn ip's of worker nodes in nginx upstream config

--- a/roles/k8s_master_ovpn/templates/nginx.conf
+++ b/roles/k8s_master_ovpn/templates/nginx.conf
@@ -1,9 +1,9 @@
 events {}
 http {
         upstream backend {
-                server vpn_ip1:8080 weight=1;
-                server vpn_ip2:8080 weight=2;
-		server vpn_ip3:8080 weight=3;
+                server 10.0.0.3:8080 weight=1;
+                server 10.0.0.4:8080 weight=2;
+		server 10.0.0.5:8080 weight=3;
         }
  
         server {
