--- a/roles/k8s_master_zerotier/templates/nginx.conf
+++ b/roles/k8s_master_zerotier/templates/nginx.conf
@@ -1,13 +1,13 @@
 events {}
 http {
         upstream backend {
-                server 10.0.0.3:8080 weight=1;
-                server 10.0.0.4:8080 weight=2;
-		server 10.0.0.5:8080 weight=3;
+                server <vpn-ip>:8080 weight=1;
+                server <vpn-ip>:8080 weight=2;
+		server <vpn-ip>:8080 weight=3;
         }
  
         server {
-                listen 10.0.0.1:80;
+                listen <vpn-server-ip>:80;
                 location / {
                         proxy_pass http://backend;
 		}
